--- a/happy_or_angry_sports_crowd2.ipynb
+++ b/happy_or_angry_sports_crowd2.ipynb
@@ -5,16 +5,10 @@
    "metadata": {},
    "source": [
     "<img src=\"./sf.png\"  \n",
-    "     align=\"center\"\n",
-    "     width=\"200\" />\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./crowd.jfif\"\n",
     "     align=\"left\"\n",
+    "     width=\"275\" />\n",
+    "<img src=\"./crowd.jfif\"\n",
+    "     align=\"right\"\n",
     "     width=\"400\" />"
    ]
   },
