--- a/happy_or_angry_sports_crowd2.ipynb
+++ b/happy_or_angry_sports_crowd2.ipynb
@@ -406,7 +406,7 @@
    },
    "source": [
     "# Prepare the data to train the model\n",
-    "Create a pytorch `DataLoaders` object that containing a training and validation sets using the fastai's built-in `DataBlock` method."
+    "Create a pytorch `DataLoaders` object with training and validation sets using the fastai's built-in `DataBlock` method."
    ]
   },
   {
